--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "np-payment-sdk",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Unified Payment SDK for Nepal (eSewa, Khalti, ConnectIPS, IME Pay, Mobile Banking)",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -10,7 +10,8 @@
   "scripts": {
     "build": "tsc",
     "test": "jest",
-    "prepare": "npm run build"
+    "prepare": "npm run build",
+    "test:coverage": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -34,14 +35,20 @@
     "@typescript-eslint/eslint-plugin": "^8.35.1",
     "@typescript-eslint/parser": "^8.35.1",
     "eslint": "^9.30.1",
-    "jest": "^29.0.0",
-    "supertest": "^7.1.1",
+    "jest": "^29.7.0",
+    "supertest": "^7.1.3",
     "ts-jest": "^29.4.0",
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@paypal/checkout-server-sdk": "^1.0.3",
     "axios": "^1.10.0",
+    "cashfree-pg": "^5.0.8",
     "dotenv": "^17.0.1",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "flutterwave-node-v3": "^1.3.0",
+    "paystack-api": "^2.0.6",
+    "razorpay": "^2.9.6",
+    "stripe": "^18.3.0"
   }
 }
