fix: update Husky to modern v9+ format
- Remove deprecated shell script headers from pre-commit hook
- Update package.json to use modern husky command
- Reinitialize Husky with latest configuration format
- Resolves deprecation warnings for v10.0.0 compatibility

BREAKING CHANGE: None - maintains same functionality with updated syntax

--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "ci-check": "npm run quality-check && npm run test:coverage && npm run build",
     "pre-commit": "npm run lint:fix && npm run type-check && npm run test",
     "clean": "rimraf dist coverage",
-    "prepare": "npm run build && husky install",
-    "postinstall": "husky install"
+    "prepare": "husky"
   },
   "repository": {
     "type": "git",
